force-app/main/default/objects/SVMXA360__CONF_ObjectMapping__c/SVMXA360__CONF_ObjectMapping__c.object-meta.xml
<CustomObject>
    <description>Stores the details of mapped fields and values.</description>
    <label>Object Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>