force-app/main/default/objects/SVMXA360__CONF_ObjectMapping__c/fields/SVMXA360__HeaderRecordObject__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__HeaderRecordObject__c</fullName>
    <description>This field stores the current record header of expression</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Header Record Object</label>
    <length>150</length>
    <type>Text</type>
</CustomField>