force-app/main/default/objects/SVMXA360__CONF_ObjectMapping__c/fields/SVMXA360__ObjectMappingJSON__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectMappingJSON__c</fullName>
    <description>The object mapping and object mapping details in JSON format.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Mapping JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>