force-app/main/default/objects/SVMXA360__CONF_ObjectMapping__c/fields/SVMXA360__SourceObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceObjectAPIName__c</fullName>
    <description>The source object API name from which the field values should be mapped.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>