force-app/main/default/objects/SVMXA360__CONF_ObjectMapping__c/fields/SVMXA360__TargetObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TargetObjectAPIName__c</fullName>
    <description>The target object API name to which the field values should be mapped.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>