force-app/main/default/objects/SVMXA360__CONF_ObjectMapping__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>Element Row position in the section.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Mapping</fullName>
                <default>true</default>
                <label>Field Mapping</label>
            </value>
            <value>
                <fullName>Value Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>